--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
-# Auto-detect text files and normalize line endings
+# Set all text files to use LF in the repository
 * text=auto
 
-# Force specific endings for scripts if needed
-*.sh text eol=lf
-*.bat text eol=crlf
+# Optionally, force certain file types to always have LF
+*.c    text eol=lf
+*.h    text eol=lf
+*.mxproject text eol=lf
+*.ioc text eol=lf
