--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "forcesensor_adc_main.h": "c"
+        "forcesensor_adc_main.h": "c",
+        "stdlib.h": "c",
+        "osqueue_helpers.h": "c",
+        "opticalsensor_main.h": "c",
+        "bpm_main.h": "c",
+        "forcesensor_ads1115_main.h": "c",
+        "lumexlcd_main.h": "c",
+        "pid_main.h": "c"
     }
 }
