--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,18 @@
         "bpm_main.h": "c",
         "forcesensor_ads1115_main.h": "c",
         "lumexlcd_main.h": "c",
-        "pid_main.h": "c"
+        "pid_main.h": "c",
+        "bit": "cpp",
+        "cmath": "cpp",
+        "concepts": "cpp",
+        "cstdarg": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "type_traits": "cpp",
+        "limits": "cpp",
+        "new": "cpp",
+        "cinttypes": "cpp",
+        "typeinfo": "cpp"
     }
 }
