--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@
 Debug/
 debug/
 Release/
-release
+release/
+
+# build log
+build_log.txt
 
 # Prerequisites
 *.d
@@ -50,8 +53,6 @@ release
 *.su
 *.idb
 *.pdb
-
-*.bat
 
 # Freemarker template files
 *.ftl
