--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,21 +2,21 @@ name: build
 
 on:
   pull_request:
+  push:
 
 jobs:
   build:
+    name: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      # Build Debug
       - name: Build Debug
         uses: xanderhendriks/action-build-stm32cubeide@v16.0
         with:
           project-path: '.'
           project-target: 'stm32_dyno_firmware_v2/Debug'
 
-      # Build Release
       - name: Build Release
         uses: xanderhendriks/action-build-stm32cubeide@v16.0
         with:
